Fixed spacelab nav-collapse caret

--- a/spacelab/bootstrap.css
+++ b/spacelab/bootstrap.css
@@ -3427,6 +3427,16 @@ a.thumbnail:hover {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.5);
   color: #333333;
 }
+.navbar .nav-collapse > .nav > li > a > .caret {
+  border-top-color: #999999;
+}
+.navbar .nav-collapse > .nav > li > a:hover {
+  text-shadow: none;
+  color: #ffffff;
+}
+.navbar .nav-collapse > .nav > li > a:hover .caret {
+  border-top-color: #ffffff;
+}
 .btn {
   background-color: #f1f1f1;
   background-image: -moz-linear-gradient(top, #f4f4f4, #ececec);
