--- a/spacelab/bootswatch.less
+++ b/spacelab/bootswatch.less
@@ -91,6 +91,20 @@
 	}
 }
 
+.navbar .nav-collapse > .nav > li > a > .caret {
+	border-top-color: @grayLight;
+}
+
+.navbar .nav-collapse > .nav > li > a:hover {
+	text-shadow: none;
+	color: @white;
+	
+	.caret {
+		border-top-color: @white;
+	}
+}
+
+
 // BUTTON
 // -----------------------------------------------------
 
